<resources>
    <string name="app_name">Велосипедная графика</string>
    <string name="bicycleCharts">Велосипедные графики</string>
    <string name="by_penakelex">by penakelex</string>
    <string name="grafics_calculator">Графический калькулятор</string>
    <string name="hello_blank_fragment">Hello blank fragmentEntity</string>
    <string name="history">История</string>
    <string name="favourite">Избранное</string>
    <string name="charts">Графики</string>
    <string name="functions">Функции</string>
    <string name="areas">Площади</string>
    <string name="left_rectangles_method">Метод левых прямоугольников</string>
    <string name="middle_rectangles_method">Метод средних прямоугольников</string>
    <string name="right_rectangles_method">Метод правых прямоугольников</string>
    <string name="trapezoid_method">Метод трапеций</string>
    <string name="first_function">Первая функция:</string>
    <string name="input_function">Введите функцию</string>
    <string name="second_function">Вторая функция:</string>
    <string name="step">Единичный отрезок:</string>
    <string name="input_step">Введите единичный отрезок</string>
    <string name="loading">Загрузка...</string>
    <string name="make">Построить</string>
    <string name="fill_all">Заполните все поля!</string>
    <string name="language">Язык</string>
    <string name="app_information">О приложении</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="russian">Русский</string>
    <string name="functions_descriptions">Доступные функции:\n1) Возведение в степень - \"^\";\n2) Умножение - \"*\";\n3) Деление - \"/\";\n4) Сложение - \"+\";\n5) Вычитание - \"-\"...</string>
    <string name="in_development">В разработке...</string>
</resources>